# insensate

./: .travis.yml  EpocFrame.pb.go  LICENSE  Makefile  README.md  frame.go  insenced.go  insensate.cabal  insensate.go
insenced/: config.go  insenced.go
insenced_drain/: drain.go
protobuf/: EpocFrame.proto
