name:                insensate
version:             0.1.0.0
synopsis:            Toolkit for working with data from the Emotiv EPOC
-- description:         
homepage:            https://github.com/fractalcat/insensate
license:             BSD3
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable insenced_cat
  hs-source-dirs: util/insenced_cat/
  main-is: Main.hs            
  -- other-modules:       
  -- other-extensions:    
  build-depends:       
    base >=4.6 && <5,
    protobuf,
    bytestring
  -- hs-source-dirs:      
  default-language:    Haskell2010
